add production to database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,11 +81,11 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-# production:
-#   <<: *default
-#   adapter: postgresql
-#   database: <%= ENV['TEMPLATEAPP_DATABASE'] %>
-#   username: <%= ENV['TEMPLATEAPP_DATABASE_USER'] %>
-#   password: <%= ENV['TEMPLATEAPP_DATABASE_PASSWORD'] %>
-#   host: <%= ENV['TEMPLATE_DATABASE_HOSTNAME'] %>
-#   port: 5432
+production:
+ # <<: *default
+  adapter: postgresql
+  database: bestrishay_database
+  username: postgres
+  password: Rohit@123
+  host: localhost
+  port: 5432
